@@ -8,11 +8,10 @@
 # profiles in proper order, but for now we're just parsing these 2
 # config files
 
-# TODO: Build USERFILE dynamically based upon the currently selected profile.
-# Work from the profile up to its parents, etc, to build this list.
-
 # TODO: Split this file up in such a way as to be automatically done
 # correctly for various distros.
+
+. "${SCRIPTDIR}/common/get_profiledirs.bash" || exit 1
 
 # read_userdata()
 # Inputs:
@@ -24,7 +23,26 @@
 #  $usergroups - a comma-separated list of groups the user belongs to
 #  $usercomment - the GECOS comment field for the user
 read_userdata() {
-	local userfile="${DATADIR}/user/${1} ${DATADIR}/accounts"
+	local userfile="" profile_dirs="" d d_
+
+	if [[ -n "${PALUDIS_PROFILE_DIRS}" ]] ; then
+		profile_dirs="${PALUDIS_PROFILE_DIRS}"
+	elif [[ -e "/etc/make.profile" ]] ; then
+		profile_dirs="/etc/make.profile"
+	else
+		die "Could not determine the profile directory."
+	fi
+	
+	local all_profile_dirs="$(get_profiledirs "${profile_dirs}")"
+
+	for d in "user/${1}" "accounts" ; do
+		for d_ in ${all_profile_dirs} ; do
+			[[ -f "${d_}/accounts/${d}" ]] \
+				&& userfile="${groupfile} ${d_}/accounts/${d}"
+		done
+	done
+
+
 	local userid userid_ usershell usershell_ userhome userhome_
 	local usergroups usergroups_ usercomment usercomment_
 
